RESOLVED FIXED32133
REGRESSION(4.0.3-48777): Crash in JSC::ExecState::propertyNames() (Debug-only?)
https://bugs.webkit.org/show_bug.cgi?id=32133
Summary REGRESSION(4.0.3-48777): Crash in JSC::ExecState::propertyNames() (Debug-only?)
Oliver Hunt
Reported 2009-12-03 13:38:38 PST
9/25/09 10:21 PM Jon Honeycutt: * SUMMARY Safari crashes when visiting http://kb2.adobe.com/cps/320/320005.html . * STEPS TO REPRODUCE 1. Launch a Debug build of ToT 2. Visit http://kb2.adobe.com/cps/320/320005.html * REGRESSION Doesn't crash in Safari 4.0.3 on SL. Doesn't crash on Safari-SnowLeopard-Production-Rocket-48784-25510. Doesn't crash on Safari-Windows-Release-Rocket-48782-25510. Does crash on Mac Debug build of r48777. Does crash on Win Debug build of r48784. * NOTES Stack trace: Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x00000000000000c0 Crashed Thread: 0 Dispatch queue: com.apple.main-thread
Attachments
Patch (5.23 KB, patch)
2009-12-03 17:38 PST, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2009-12-03 17:38:58 PST
WebKit Review Bot
Comment 2 2009-12-03 17:43:00 PST
style-queue ran check-webkit-style on attachment 44279 [details] without any errors.
Gavin Barraclough
Comment 3 2009-12-03 18:06:35 PST
Comment on attachment 44279 [details] Patch Brrrraaaaiiiiiinnnnnnzzzzzzz. Oh no, that's not this patch. r+
Oliver Hunt
Comment 4 2009-12-03 18:18:43 PST
Committed r51672
Note You need to log in before you can comment on or make changes to this bug.