REGRESSION(4.0.3-48777): Crash in JSC::ExecState::propertyNames() (Debug-only?) https://bugs.webkit.org/show_bug.cgi?id=32133

Reviewed by Gavin Barraclough.

Work around odd GCC-ism and correct the scopechain for use by
calls made while a cachedcall is active on the callstack.

Canonical link: https://commits.webkit.org/43099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51672 268f45cc-cd09-0410-ab3c-d52691b4dbfc